v sync (#191)
* move scheduler for iterator into final inst var of iterator

* create compact from existing context, adapt pred/succ testing to CompactContext

* extract Tracked, start read only context work

* extract BaseContext

* static/dynamic context refactoring phase 1

* static/dynamic context refactoring phase 2

* cleanup

* move to context package

* move to context package. working memberships testint

* copyright

* remove Ring access from Context

* consolidate.  add tests for static context.

* Mirror tests for StaticContext passing

* pull up

* dynamic -> static conversion

* remove CompactContext

* adapt builder

* moar refactoring. implement missed methods on StaticContext. Add new view change notification using StaticContext. Add pendingView to CHOAM in prep for virtual sync

* move to inner

* fix StaticContext.isMember. Use StaticContext for CHOAM Committee views

* moar fixes to StaticContext to match existing contracts. Replace all the CHOAM Context use with StaticContext

* clean up PendingView logic.  Partial view synchronization implementation

* delegate next view logic to the current Committee

* reconfiguration logic uses pending view for virtual view synchrony

* number o' epochs

* allow unbounded number of epochs

* allow unbounded number of epochs

* Complete Ethereal controller upon view assembly.  Complete Driven context upon entering the Complete state.

* no reuse of forks. handle new epochs after produce.

* reuse forks

* 4 epochs

* do not reuse forks

* remove old style view change listener

* refactor fernet token handling

* better logging, fix npe's

* Advance pending view on Assembly block. Virtually synchronize RBC context in Domain.

Some minor, but important fixin's revealed during POC uptake testing

* separate configuration for genesis gen. use supplier for diadem check in assembly

* squelch

* update mvnw

* java 22

* java 22

* 