@@ -7,15 +7,15 @@
 package com.salesforce.apollo.ethereal;
 
 import com.google.protobuf.ByteString;
-import com.salesforce.apollo.ethereal.proto.Gossip;
-import com.salesforce.apollo.ethereal.proto.Missing;
-import com.salesforce.apollo.ethereal.proto.Update;
 import com.salesforce.apollo.cryptography.Digest;
 import com.salesforce.apollo.ethereal.Dag.DagImpl;
 import com.salesforce.apollo.ethereal.EpochProofBuilder.epochProofImpl;
 import com.salesforce.apollo.ethereal.EpochProofBuilder.sharesDB;
 import com.salesforce.apollo.ethereal.linear.Extender;
 import com.salesforce.apollo.ethereal.linear.TimingRound;
+import com.salesforce.apollo.ethereal.proto.Gossip;
+import com.salesforce.apollo.ethereal.proto.Missing;
+import com.salesforce.apollo.ethereal.proto.Update;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -32,26 +32,27 @@ import java.util.function.Consumer;
  */
 public class Ethereal {
 
-    private static final Logger               log          = LoggerFactory.getLogger(Ethereal.class);
-    private final        Config               config;
-    private final        ThreadPoolExecutor   consumer;
-    private final        Creator              creator;
-    private final        AtomicInteger        currentEpoch = new AtomicInteger(-1);
-    private final        Map<Integer, epoch>  epochs       = new ConcurrentHashMap<>();
-    private final        Set<Digest>          failed       = new ConcurrentSkipListSet<>();
-    private final        Queue<Unit>          lastTiming;
-    private final        int                  maxSerializedSize;
-    private final        Consumer<Integer>    newEpochAction;
-    private final        AtomicBoolean        started      = new AtomicBoolean();
-    private final        Consumer<List<Unit>> toPreblock;
+    private static final Logger                          log          = LoggerFactory.getLogger(Ethereal.class);
+    private final        Config                          config;
+    private final        ThreadPoolExecutor              consumer;
+    private final        Creator                         creator;
+    private final        AtomicInteger                   currentEpoch = new AtomicInteger(-1);
+    private final        Map<Integer, epoch>             epochs       = new ConcurrentHashMap<>();
+    private final        Set<Digest>                     failed       = new ConcurrentSkipListSet<>();
+    private final        Queue<Unit>                     lastTiming;
+    private final        int                             maxSerializedSize;
+    private final        Consumer<Integer>               newEpochAction;
+    private final        AtomicBoolean                   started      = new AtomicBoolean();
+    private final        BiConsumer<Boolean, List<Unit>> toPreblock;
+    private volatile     boolean                         completeIt   = false;
 
     public Ethereal(Config config, int maxSerializedSize, DataSource ds, BiConsumer<List<ByteString>, Boolean> blocker,
                     Consumer<Integer> newEpochAction, String label) {
-        this(config, maxSerializedSize, ds, blocker(blocker, config), newEpochAction, label);
+        this(label, config, maxSerializedSize, ds, blocker(blocker, config), newEpochAction);
     }
 
-    public Ethereal(Config conf, int maxSerializedSize, DataSource ds, Consumer<List<Unit>> toPreblock,
-                    Consumer<Integer> newEpochAction, String label) {
+    private Ethereal(String label, Config conf, int maxSerializedSize, DataSource ds,
+                     BiConsumer<Boolean, List<Unit>> toPreblock, Consumer<Integer> newEpochAction) {
         if (!Dag.validate(conf.nProc())) {
             throw new IllegalArgumentException("Invalid # of processes, unable to build quorum: " + conf.nProc());
         }
@@ -72,11 +73,11 @@ public class Ethereal {
     private static ThreadPoolExecutor consumer(String label) {
         return new ThreadPoolExecutor(1, 1, 1, TimeUnit.SECONDS, new PriorityBlockingQueue<>(),
                                       Thread.ofVirtual().name("Ethereal Consumer[" + label + "]").factory(),
-                                      (r, t) -> log.trace("Shutdown, cannot consume unit", t));
+                                      (r, t) -> log.trace("Shutdown, cannot consume unit"));
     }
 
     /**
-     * return a preblock from a slice of units containing a timing round. It assumes that the timing unit is the last
+     * Return a preblock from a slice of units containing a timing round. It assumes that the timing unit is the last
      * unit in the slice, and that random source data of the timing unit starts with random bytes from the previous
      * level.
      */
@@ -90,20 +91,21 @@ public class Ethereal {
         return data.isEmpty() ? null : data;
     }
 
-    private static Consumer<List<Unit>> blocker(BiConsumer<List<ByteString>, Boolean> blocker, Config config) {
-        return units -> {
-            var print = log.isTraceEnabled() ? units.stream().map(e -> e.shortString()).toList() : null;
+    private static BiConsumer<Boolean, List<Unit>> blocker(BiConsumer<List<ByteString>, Boolean> blocker,
+                                                           Config config) {
+        return (completeIt, units) -> {
+            var print = log.isTraceEnabled() ? units.stream().map(PreUnit::shortString).toList() : null;
             log.trace("Make pre block: {} on: {}", print, config.logLabel());
             List<ByteString> preBlock = toList(units);
-            var timingUnit = units.get(units.size() - 1);
+            var timingUnit = units.getLast();
             var last = false;
-            if (timingUnit.level() == config.lastLevel() && timingUnit.epoch() == config.numberOfEpochs() - 1) {
+            if (timingUnit.level() == config.lastLevel() && (completeIt
+            || timingUnit.epoch() == config.numberOfEpochs() - 1)) {
                 log.debug("Closing at last level: {} at epoch: {} on: {}", timingUnit.level(), timingUnit.epoch(),
                           config.logLabel());
                 last = true;
             }
             if (preBlock != null) {
-
                 log.trace("Emitting last: {} pre block: {} on: {}", last, print, config.logLabel());
                 try {
                     blocker.accept(preBlock, last);
@@ -114,17 +116,22 @@ public class Ethereal {
         };
     }
 
+    public void completeIt() {
+        completeIt = true;
+    }
+
     public String dump() {
         var builder = new StringBuffer();
         builder.append("****************************").append('\n');
-        epochs.keySet().stream().sorted().forEach(e -> {
-            builder.append("Epoch: ")
-                   .append(e)
-                   .append('\n')
-                   .append(epochs.get(e).adder.dump())
-                   .append('\n')
-                   .append('\n');
-        });
+        epochs.keySet()
+              .stream()
+              .sorted()
+              .forEach(e -> builder.append("Epoch: ")
+                                   .append(e)
+                                   .append('\n')
+                                   .append(epochs.get(e).adder.dump())
+                                   .append('\n')
+                                   .append('\n'));
         builder.append("****************************").append('\n').append('\n');
         return builder.toString();
     }
@@ -158,10 +165,8 @@ public class Ethereal {
                       .stream()
                       .filter(e -> e.getKey() >= current)
                       .filter(e -> !haves.contains(e.getKey()))
-                      .forEach(e -> {
-                          builder.addMissings(
-                          Missing.newBuilder().setEpoch(e.getKey()).setHaves(e.getValue().adder().have()));
-                      });
+                      .forEach(e -> builder.addMissings(
+                      Missing.newBuilder().setEpoch(e.getKey()).setHaves(e.getValue().adder().have())));
                 return builder.build();
             }
 
@@ -210,9 +215,10 @@ public class Ethereal {
             return;
         }
         log.trace("Stopping Ethereal on: {}", config.logLabel());
+        completeIt();
         consumer.getQueue().clear(); // Flush any pending consumers
         creator.stop();
-        epochs.values().forEach(e -> e.close());
+        epochs.values().forEach(epoch::close);
         epochs.clear();
         failed.clear();
         lastTiming.clear();
@@ -241,7 +247,7 @@ public class Ethereal {
                     return;
                 }
 
-                // creator already knows about units created by this node.
+                // the creator already knows about units created by this node.
                 if (unit.creator() != config.pid()) {
                     creator.consume(unit);
                 }
@@ -249,15 +255,11 @@ public class Ethereal {
 
         });
         final var adder = new Adder(epoch, dg, maxSerializedSize, config, failed);
-        final var e = new epoch(epoch, dg, adder, new AtomicBoolean(true));
-        return e;
+        return new epoch(epoch, dg, adder, new AtomicBoolean(true));
     }
 
     private void finishEpoch(int epoch) {
-        var ep = getEpoch(epoch);
-        if (ep != null) {
-            ep.noMoreUnits();
-        }
+        getEpoch(epoch).noMoreUnits();
     }
 
     private epochWithNewer getEpoch(int epoch) {
@@ -282,7 +284,7 @@ public class Ethereal {
     private Consumer<List<Unit>> handleTimingRounds() {
         AtomicInteger current = new AtomicInteger(0);
         return round -> {
-            var timingUnit = round.get(round.size() - 1);
+            var timingUnit = round.getLast();
             var epoch = timingUnit.epoch();
 
             if (timingUnit.level() >= config.lastLevel()) {
@@ -291,7 +293,7 @@ public class Ethereal {
                 finishEpoch(epoch);
             }
             if (epoch >= current.get() && timingUnit.level() <= config.lastLevel()) {
-                toPreblock.accept(round);
+                toPreblock.accept(completeIt, round);
                 log.trace("Preblock produced: {} on: {}", timingUnit, config.logLabel());
             }
             current.set(epoch);
@@ -299,7 +301,7 @@ public class Ethereal {
     }
 
     /**
-     * insert puts the provided unit directly into the corresponding epoch. If such epoch does not exist, creates it.
+     * Insert puts the provided unit directly into the corresponding epoch. If the epoch does not exist, it creates it.
      * All correctness checks (epoch proof, adder, dag checks) are skipped. This method is meant for our own units
      * only.
      */
@@ -319,14 +321,14 @@ public class Ethereal {
     }
 
     /**
-     * newEpoch creates and returns a new epoch object with the given EpochID. If such epoch already exists, returns
-     * it.
+     * newEpoch creates and returns a new epoch object with the given EpochID. If the epoch already exists, return it.
      */
     private epoch newEpoch(int epoch) {
-        if (epoch >= config.numberOfEpochs()) {
-            log.trace("Finished, beyond last epoch: {} on: {}", epoch, config.logLabel());
-            return null;
-        }
+        //        var n = config.numberOfEpochs();
+        //        if (epoch >= n) {
+        //            log.trace("Finished, beyond last epoch: {} on: {}", epoch, config.logLabel());
+        //            return null;
+        //        }
         final var currentId = currentEpoch.get();
         epoch e = epochs.get(epoch);
         if (e == null && epoch == currentId + 1) {
@@ -351,8 +353,7 @@ public class Ethereal {
     }
 
     /**
-     * newEpoch creates and returns a new epoch object with the given EpochID. If such epoch already exists, returns
-     * it.
+     * newEpoch creates and returns a new epoch object with the given EpochID. If the epoch already exists, return it.
      */
     private epoch retreiveEpoch(int epoch) {
         final var currentId = currentEpoch.get();
@@ -411,11 +412,11 @@ public class Ethereal {
         @Override
         public int compareTo(UnitTask o) {
             var comp = Integer.compare(unit.epoch(), o.unit.epoch());
-            if (comp < 0 || comp > 0) {
+            if (comp != 0) {
                 return comp;
             }
             comp = Integer.compare(unit.height(), o.unit.height());
-            if (comp < 0 || comp > 0) {
+            if (comp != 0) {
                 return comp;
             }
             return Integer.compare(unit.creator(), o.unit.creator());
